<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/inputLogin"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:autofillHints=""
        android:hint="@string/login"
        android:imeOptions="flagForceAscii"
        android:inputType="text"
        android:singleLine="true" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputPass"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:hint="@string/password"
        android:imeOptions="flagForceAscii"
        android:inputType="textPassword"
        android:singleLine="true"
        android:autofillHints="" />

    <Button android:id="@+id/btnLogin"
        android:layout_margin="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter" />

</LinearLayout>
